# um_to_healpix

./: .gitignore  LICENSE  README.md  project_overview.ini  pyproject.toml
.github/workflows/: tests.yml
config/: hk25_config.py  hk26_config.py  my_config.py
deploy/: rsync_to_jasmin.sh
docs/: high_level_code_overview.md  installation.md  installation_and_running.md  n1280_CoMA9_processing.md  test_suite.md
envs/: ci_env.yml  um2hp_env.yml
notebooks/: cmip6_variable_mapping.json  view_UM_healpix_on_JASMIN_obj_store.ipynb
output_testing/: .gitignore  basic_testing.py  hk26_testing_remakefile.py  iris_plot_precip.py  plotting.py  test_suite.py  testing_remakefile.py
output_tests/: README.md  conftest.py  datasets.py  test_hk26_data.py  test_plots.py
scripts/: jasmin_node_health_check.py  monitor_and_trigger.sh
scripts/slurm_optimization_tests/: regrid_benchmark.py
src/um_to_healpix/: cube_to_da_mapping.py  healpix_coarsen.py  latlon_to_healpix.py  um_parse_slurm.py  um_process_tasks.py  um_processing_config.py  um_slurm_control.py  util.py
src/um_to_healpix/plotting/: __init__.py
tests/: README.md  conftest.py
tests/e2e/: conftest.py  test_full_pipeline.py
tests/integration/: conftest.py  test_coarsen_pipeline.py  test_regrid_pipeline.py
tests/unit/: test_cube_to_da_mapping.py  test_healpix_coarsen.py  test_latlon_to_healpix.py  test_util.py
